# momo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/plans/: delegated-giggling-pike.md
.github/workflows/: ci.yml
crates/momo-app/: Cargo.toml
crates/momo-app/src/: main.rs
crates/momo-core/: Cargo.toml
crates/momo-core/src/: config.rs  error.rs  frame.rs  lib.rs  types.rs
crates/momo-decklink/: Cargo.toml  build.rs
crates/momo-decklink/cpp/: decklink_bridge.cpp  decklink_bridge.h
crates/momo-decklink/sdk/: .gitignore  README.md
crates/momo-decklink/src/: conversions.rs  ffi.rs  input.rs  lib.rs  output.rs
crates/momo-gpu/: Cargo.toml  build.rs
crates/momo-gpu/kernels/: crop.cu  flip.cu  scale.cu
crates/momo-gpu/src/: cuda.rs  lib.rs  processor.rs  transform.rs
crates/momo-pipeline/: Cargo.toml
crates/momo-pipeline/src/: event.rs  input.rs  lib.rs  mock_input.rs  pipeline.rs  preview.rs
crates/momo-uvc/: Cargo.toml
crates/momo-uvc/src/: convert.rs  input.rs  lib.rs
crates/momo-web/: Cargo.toml  build.rs
crates/momo-web/src/: embedded_ui.rs  error.rs  fallback.html  lib.rs  state.rs
crates/momo-web/src/handlers/: config.rs  devices.rs  mod.rs  pipeline.rs  preview.rs  webrtc_ws.rs  ws.rs
crates/momo-webrtc/: Cargo.toml
crates/momo-webrtc/src/: convert.rs  encoder.rs  lib.rs  manager.rs  session.rs  signal.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/api/: client.ts  types.ts  webrtc.ts  websocket.ts
frontend/src/components/: ConfigActions.tsx  CropOverlay.tsx  CropRect.tsx  FpsChart.tsx  InputPanel.tsx  OutputCard.tsx  OutputList.tsx  PreviewImage.tsx  StatusBar.tsx  Waveform.tsx  WebRTCPreview.tsx
frontend/src/styles/: global.css
frontend/src/utils/: coordinates.ts
