[workspace]
resolver = "2"
members = [
    "crates/momo-core",
    "crates/momo-decklink",
    "crates/momo-uvc",
    "crates/momo-gpu",
    "crates/momo-pipeline",
    "crates/momo-web",
    "crates/momo-app",
]

[workspace.dependencies]
momo-core = { path = "crates/momo-core" }
momo-decklink = { path = "crates/momo-decklink" }
momo-uvc = { path = "crates/momo-uvc" }
momo-gpu = { path = "crates/momo-gpu" }
momo-pipeline = { path = "crates/momo-pipeline" }
momo-web = { path = "crates/momo-web" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
async-stream = "0.3"
cxx = "1"
cudarc = "0.16"
nokhwa = { version = "0.10", features = ["input-native"] }
