[package]
name = "momo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
momo-core = { workspace = true }
momo-pipeline = { workspace = true }
momo-web = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
