[package]
name = "momo-app"
version = "0.1.0"
edition = "2021"

[features]
default = []
decklink = ["momo-pipeline/decklink"]
uvc = ["momo-pipeline/uvc"]
gpu = ["momo-pipeline/gpu"]
webrtc = ["momo-web/webrtc"]

[dependencies]
momo-core = { workspace = true }
momo-pipeline = { workspace = true }
momo-web = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
