[package]
name = "momo-decklink"
version = "0.1.0"
edition = "2021"

[features]
default = []
decklink = ["dep:cxx"]

[dependencies]
momo-core = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
cxx = { workspace = true, optional = true }

[build-dependencies]
cxx-build = "1"
