[package]
name = "momo-pipeline"
version = "0.1.0"
edition = "2021"

[features]
default = []
decklink = ["momo-decklink/decklink"]
uvc = ["momo-uvc/uvc"]
gpu = ["momo-gpu/gpu"]

[dependencies]
momo-core = { workspace = true }
momo-decklink = { workspace = true }
momo-uvc = { workspace = true }
momo-gpu = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
