[package]
name = "momo-web"
version = "0.1.0"
edition = "2021"

[dependencies]
momo-core = { workspace = true }
momo-pipeline = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
