[package]
name = "momo-web"
version = "0.1.0"
edition = "2021"

[dependencies]
momo-core = { workspace = true }
momo-pipeline = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
